@@ -1,0 +1,5 @@
+APP_ENV=staging
+APP_NAME=custom environment app
+DB_HOST=localhost
+DB_USER=user
+DB_PASS=pass
