@@ -65,6 +65,7 @@ x added: `PROXY(endpoint, hostname, [copypath], [before_fn(uri,req,res)], [after
 x added: `schema.middleware(function($, next))` for creating simple middlewares for Schema operations
 x added: `FILE404(fn(req, res))` performs a simple fallback for non-existing files
 x added: `$PATCH(schema, model, [options], callback, [controller])` method
+- added: `.env` parser to `process.env`
 
 x updated: `$.invalid()` without arguments can return a function `function(err)`
 x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
